@@ -17,6 +17,7 @@
 			<label index="tx_bzdstaffdirectory_persons.usergroups">Group membership</label>
 			<label index="tx_bzdstaffdirectory_persons.function">Function / Job Description</label>
 			<label index="tx_bzdstaffdirectory_persons.date_incompany">In company since</label>
+			<label index="tx_bzdstaffdirectory_persons.date_birthdate">Birthdate</label>
 			<label index="tx_bzdstaffdirectory_persons.email">Email Address</label>
 			<label index="tx_bzdstaffdirectory_persons.tasks">User Tasks</label>
 			<label index="tx_bzdstaffdirectory_persons.location">Location</label>
@@ -66,6 +67,7 @@
 			<label index="tx_bzdstaffdirectory_persons.usergroups">Gruppenzugehörigkeit</label>
 			<label index="tx_bzdstaffdirectory_persons.function">Funktion</label>
 			<label index="tx_bzdstaffdirectory_persons.date_incompany">In der Firma seit</label>
+			<label index="tx_bzdstaffdirectory_persons.date_birthdate">Geburtsdatum</label>
 			<label index="tx_bzdstaffdirectory_persons.email">Emailadresse</label>
 			<label index="tx_bzdstaffdirectory_persons.tasks">Aufgaben</label>
 			<label index="tx_bzdstaffdirectory_persons.location">Standort</label>
@@ -157,6 +159,7 @@
 			<label index="tt_content.pi_flexform.startingpoint" type="integer">182822534</label>
 			<label index="tx_bzdstaffdirectory_persons.date_incompany" type="integer">113877520</label>
 			<label index="tt_content.pi_flexform.ignoreTeamLeaders" type="integer">194229382</label>
+			<label index="tx_bzdstaffdirectory_persons.date_birthdate" type="integer">214778330</label>
 		</languageKey>
 	</orig_hash>
 	<orig_text type="array">
@@ -209,6 +212,7 @@
 			<label index="tt_content.pi_flexform.startingpoint">Startingpoint</label>
 			<label index="tx_bzdstaffdirectory_persons.date_incompany">In company since</label>
 			<label index="tt_content.pi_flexform.ignoreTeamLeaders">Ignore the team leaders (hide in list)?</label>
+			<label index="tx_bzdstaffdirectory_persons.date_birthdate">Birthdate</label>
 		</languageKey>
 	</orig_text>
 </T3locallang>
