@@ -14,6 +14,7 @@
 			<label index="label_room">Room:</label>
 			<label index="label_function">Function:</label>
 			<label index="label_date_incompany">In company since:</label>
+			<label index="label_date_birthdate">Birthdate:</label>
 			<label index="label_first_name">First name:</label>
 			<label index="label_last_name">Last name:</label>
 			<label index="label_officehours">Office hours:</label>
@@ -41,6 +42,7 @@
 			<label index="label_room">Raum:</label>
 			<label index="label_function">Funktion:</label>
 			<label index="label_date_incompany">In der Firma seit:</label>
+			<label index="label_date_birthdate">Geburtsdatum:</label>
 			<label index="label_first_name">Vorname:</label>
 			<label index="label_last_name">Nachname:</label>
 			<label index="label_officehours">Bürozeiten:</label>
@@ -90,6 +92,7 @@
 			<label index="error_noDetailPage" type="integer">105340452</label>
 			<label index="label_groups_plural" type="integer">237903185</label>
 			<label index="label_date_incompany" type="integer">42148933</label>
+			<label index="label_date_birthdate" type="integer">75780351</label>
 		</languageKey>
 	</orig_hash>
 	<orig_text type="array">
@@ -119,6 +122,7 @@
 			<label index="error_noDetailPage">There is no detail page defined in the flexform</label>
 			<label index="label_groups_plural">Teams:</label>
 			<label index="label_date_incompany">In company since:</label>
+			<label index="label_date_birthdate">Birthdate:</label>
 		</languageKey>
 	</orig_text>
 </T3locallang>
